@@ -7,6 +7,7 @@
 	* tests/oldindep.{tex,dvi}, tests/oldindepout.dvi,
 	tests/jis.{tfm,cfn}, tests/eufm10.{tfm,cfn}
 	tests/cmr10.{pk,cfn}, tests/upjisr-h.{vf,cfn}: New tests.
+	* Makefile.am: Adjusted.
 
 2018-10-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
